wp-content/themes/sydneytheme/style.css
/* ... */
@keyframes fadein {
  0% {
    opacity: 0.7; }
  100% {
    opacity: 1; } }
        @media (min-width: 48em) {
          .slider__slide-wrapper:first-child .slider__image {
            animation: none; } }
    .slider__slide-wrapper:nth-child(2) {
      z-index: 2; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:nth-child(2) {
          left: -100vw; } }
    .slider__slide-wrapper:last-child {
      z-index: 1; }
      @media (min-width: 48em) {
        .slider__slide-wrapper:last-child {
          left: 0; } }
    .slider__slide-wrapper.previous:first-child {
      z-index: 3; }
    .slider__slide-wrapper.previous:nth-child(2) {
      z-index: 3; }
    .slider__slide-wrapper.previous:last-child {
      z-index: 2; }
    @media (min-width: 48em) {
      .slider__slide-wrapper.next:first-child .slider__content-box {
        animation: slideright 2.5s;
        animation-iteration-count: 1;
        animation-duration: 1.5s;
        animation-timing-function: ease; }
      @keyframes slideright {
        0% {
          right: 530px;
          opacity: 0; }
        100% {
          right: 130px;
          opacity: 1; } } }
    @media (min-width: 48em) {
      .slider__slide-wrapper.next:first-child .slider__content-box .subtitle::after {
        opacity: 0;
        animation: linegrow 4s;
        animation-fill-mode: forwards;
        animation-iteration-count: 1;
        animation-delay: 1s;
        animation-duration: 2s;
        animation-timing-function: ease-in-out; }
      @keyframes linegrow {
        0% {
          max-width: 0;
          opacity: 0; }
        100% {
          max-width: 86px;
          opacity: 1; } } }
  .slider__image {
    width: 100%;
    height: 280px;
    -o-object-fit: cover;
       object-fit: cover;
    -o-object-position: left;
       object-position: left;
    position: relative; }
    @media (min-width: 48em) {
      .slider__image {
        height: 670px;
        position: absolute; } }
    @media (min-width: 87em) {
      .slider__image {
        height: 870px; } }
  .slider__inner-slide-container {
    max-width: 1552px;
    margin: 0 auto;
    position: relative; }
  .slider__content-box {
    position: relative;
    margin-top: -4px; }
    @media (min-width: 48em) {
      .slider__content-box {
        position: absolute;
        top: 115px;
        right: 120px;
        margin-top: 0;
        max-width: 430px; } }
    @media (min-width: 87em) {
      .slider__content-box {
        max-width: 530px;
        right: 60px; } }
    @media (min-width: 99.5em) {
      .slider__content-box {
        right: 10px; } }
  .slider__content-box-inner {
    background: white;
    padding: 30px; }
    @media (min-width: 48em) {
      .slider__content-box-inner {
        padding: 40px; } }
    @media (min-width: 87em) {
      .slider__content-box-inner {
        padding: 82px; } }
    .slider__content-box-inner .subtitle {
      font-size: 0.875em;
      padding-bottom: 30px; }
      .slider__content-box-inner .subtitle::after {
        top: 4px;
        max-width: 86px; }
    .slider__content-box-inner--heading {
      text-transform: uppercase;
      padding: 10px 0 15px 0;
      font-family: "Roboto Condensed", sans-serif;
      font-size: 24px;
      color: #424445; }
      @media (min-width: 48em) {
        .slider__content-box-inner--heading {
          padding: 20px 0 30px 0;
          font-size: 2em; } }
      @media (min-width: 70em) {
        .slider__content-box-inner--heading {
          font-size: 46px; } }
      @media (min-width: 87em) {
        .slider__content-box-inner--heading {
          font-size: 3.250em; } }
    .slider__content-box-inner--paragraph {
      padding-bottom: 20px;
      font-size: 0.875em;
      line-height: 1.8; }
      @media (min-width: 48em) {
        .slider__content-box-inner--paragraph {
          padding-bottom: 30px;
          max-width: 310px; } }
      @media (min-width: 87em) {
        .slider__content-box-inner--paragraph {
          padding-bottom: 65px; } }
    .slider__content-box-inner .sydney-button__with-icon {
      left: 0;
      transform: none;
      margin: 0 0 10px;
      padding: 20px 48px 20px 36px; }
  .slider__progress-bar {
    margin-top: 30px;
    font-family: "Roboto Condensed", sans-serif;
    color: #424445;
    font-size: 1.25em;
    letter-spacing: 4px;
    display: none;
    visibility: hidden; }
    @media (min-width: 48em) {
      .slider__progress-bar {
        display: flex;
        visibility: visible; } }
    .slider__progress-bar--line {
      background: #EB0029;
      height: 1px;
      width: 100%;
      margin: 11px 20px; }

.slider__arrow--prev {
  position: absolute;
  top: 24%;
  transform: translateY(-24%);
  left: 0;
  z-index: 15; }
  @media (min-width: 48em) {
    .slider__arrow--prev {
      top: 50%;
      transform: translateY(-50%); } }
  .slider__arrow--prev .sydney-button__with-icon {
    margin: 0;
    padding: 22px; }
    @media (min-width: 48em) {
      .slider__arrow--prev .sydney-button__with-icon {
        padding: 32px; } }

.slider__arrow--next {
  position: absolute;
  top: 24%;
  transform: translateY(-24%);
  right: 0;
  z-index: 15; }
  @media (min-width: 48em) {
    .slider__arrow--next {
      top: 50%;
      transform: translateY(-50%); } }
  .slider__arrow--next .sydney-button__with-icon {
    margin: 0;
    padding: 22px; }
    @media (min-width: 48em) {
      .slider__arrow--next .sydney-button__with-icon {
        padding: 32px; } }

.generic-hero__wrapper {
  background: #EB0029; }

.generic-hero__container {
  max-width: 1552px;
  margin: 0 auto; }

.generic-hero__heading {
  color: white;
  text-align: center;
  padding: 120px 30px;
  font-weight: 300; }

.download-list__wrapper {
  max-width: 750px;
  margin: 0 auto;
  padding: 60px 30px 120px 30px; }
  @media (min-width: 48em) {
    .download-list__wrapper {
      padding: 120px 30px 160px 30px; } }

.download-list__container {
  padding-top: 80px; }
/* ... */

